# data-structures-and-algorithms

python/challenges/array_binary_search/: README.md  array_binary_search.py  test_array_binary_search.py
python/challenges/array_shift/: README.md  array_shift.py
python/challenges/fifo_animal_shelter/: README.md  fifo_animal_shelter.py  test_fifo_animal_shelter.py
python/challenges/linked_list/: linked_list.py  test_linked_list.py
python/challenges/linkedll_zip/: README.md  linkedll_zip.py
python/challenges/multi_bracket_validation/: multi_bracket_validation.py  test_multi_bracket_validation.py
python/challenges/queue_with_stacks/: pyproject.toml  queue_with_stacks.py  test_queue_with_stacks.py
python/challenges/stacks_and_queues/: stacks_and_queues.py  test_stacks_and_queues.py
python/tests/: test_array_shift.py
