[tool.poetry]
name = "queue_with_stacks"
version = "0.1.0"
description = ""
authors = ["louiscaruso <carusolouis00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
